--- a/privacy.html
+++ b/privacy.html
@@ -1,22 +1,17 @@
-<!-- privacy.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy - GenAI Keyword Highlighter</title>
+  <title>Privacy Policy</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 40px auto;
       line-height: 1.6;
-      padding: 0 20px;
+      margin: 40px auto;
+      max-width: 800px;
       color: #333;
     }
     h1 {
-      text-align: center;
       color: #2c3e50;
     }
     p {
@@ -26,39 +21,49 @@
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p><strong>Effective Date:</strong> August 2025</p>
-
   <p>
-    This Chrome extension (“GenAI Keyword Highlighter”) respects your privacy and is designed with user data protection in mind.
+    This Chrome extension is designed to help users highlight and match keywords
+    (such as GenAI sitelink headers and related terms) on web pages they visit.
   </p>
 
-  <h2>What Data We Collect</h2>
+  <h2>Data Collection</h2>
   <p>
-    - The extension processes <strong>website content</strong> only for the purpose of detecting and highlighting user-defined keywords. <br>
-    - User preferences (keywords, highlight colors, and settings) are stored <strong>locally in your browser’s storage</strong>.
+    This extension does <strong>not collect, store, or share</strong> any personally
+    identifiable information, financial information, or browsing history.
+  </p>
+  <p>
+    The extension only processes the text content of the current web page locally
+    on your device to perform highlighting and keyword matching. No data is sent
+    to external servers.
   </p>
 
-  <h2>What Data We Do Not Collect</h2>
+  <h2>Permissions</h2>
   <p>
-    - We do not collect personally identifiable information (name, email, phone number, etc.). <br>
-    - We do not collect financial, health, or authentication information. <br>
-    - We do not track your browsing history or personal communications.
-  </p>
-
-  <h2>Data Sharing</h2>
-  <p>
-    We do not sell, share, or transfer any data to third parties. All processing happens locally on your device.
+    - <strong>activeTab</strong>: Required to analyze the content of the currently
+      open web page when the extension is active.<br>
+    - <strong>scripting</strong>: Required to inject highlighting scripts into the
+      page for keyword detection.<br>
+    - <strong>storage</strong>: Required to save your custom keyword list and
+      highlight preferences (such as colors).
   </p>
 
   <h2>Third-Party Services</h2>
   <p>
-    This extension does not use third-party analytics, ads, or remote code execution.
+    This extension does not use, sell, or share data with third-party services.
+    Synonym matching and fuzzy matching logic are handled locally or through
+    free public APIs (if enabled by the user), without storing personal data.
+  </p>
+
+  <h2>Updates</h2>
+  <p>
+    The privacy policy may be updated in the future if the extension’s
+    functionality changes. Any updates will be published on this page.
   </p>
 
   <h2>Contact</h2>
   <p>
-    If you have questions about this policy, you may contact us at: <br>
-    <strong>[your email/contact here]</strong>
+    If you have any questions about this privacy policy, you can reach out via
+    the <a href="https://github.com/Bharaths12">developer's GitHub profile</a>.
   </p>
 </body>
 </html>
