--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <h1>Privacy Policy</h1>
   <p>
     This Chrome extension is designed to help users highlight and match keywords
-    (such as GenAI sitelink headers and related terms) on web pages they visit.
+    on web pages they visit.
   </p>
 
   <h2>Data Collection</h2>
@@ -66,5 +66,6 @@
   </p>
 </body>
 </html>
+
 
 
